home view: restyled teams & games tiles in order to prevent overflow

--- a/src/app/home/my-games-tile/my-games-tile.component.styl
+++ b/src/app/home/my-games-tile/my-games-tile.component.styl
@@ -11,7 +11,7 @@
 
     .first-part
         color $main-theme-color
-        font-size $huge-font-size
+        font-size $sub-huge-font-size
         width 50%
         text-align right
 
@@ -27,17 +27,15 @@
         p
             margin-bottom 0px
 
-    @media only screen and (max-width: $iphone-5), only screen and (max-device-width: $iphone-5)
+    @media only screen and (max-width: $media-phone), only screen and (max-device-width: $media-phone)
         flex-flow column
 
         .first-part
-            text-align center
             width auto
-            height 50%
+            text-align center
 
         .second-part
+            margin 0px 5px
             padding-left 0px
             font-size $header-font-size
-            height 50%
-            margin-top 15px
             text-align center
